--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@
     text-align: center;
 }
 
+.button-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 /* 
 .carousel-control-next, .carousel-control-prev {
     background-color: #dee2e6;
